Comment key creation as we don't need it now.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,8 +9,8 @@
 
 - include: common.yml
 
-- include: gen.yml
-  when: gpg_key_gen_enable
+#- include: gen.yml
+#  when: gpg_key_gen_enable
 
 - include: import.yml
   when: gpg_key_import_enable
